--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
             <div class="row">
                 <div class="col-lg-2"></div>
-                <div class="col-lg-2 card-header hhome">cat home.py</div>
-                <div class="col-lg-2 card-header habout">about.py</div>
-                <div class="col-lg-2 card-header hpython">python_101.py</div>
-                <div class="col-lg-2 card-header hblog">blog.py</div>
+                <div class="col-lg-2 card-header tab hhome">cat home.py</div>
+                <div class="col-lg-2 card-header tab habout">about.py</div>
+                <div class="col-lg-2 card-header tab hpython">python_101.py</div>
+                <div class="col-lg-2 card-header tab hblog">blog.py</div>
                 <div class="col-lg-2"></div>
             </div>
 
